Fix inline block spacing

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -325,9 +325,9 @@ header {
 
 	a {
 		display: inline-block;
-		
+
 		&:nth-child(even) {
-			margin-right: 10px;
+			margin-right: 5px;
 		}
 
 		.event_tile {
